added gitignore files

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ NODE_ENV=development
 
 # Database Configuration
 MONGODB_URI=mongodb+srv://acadeno360:8s%2AsPRqz2%40fi%2AW.@acadenotest.v4vxdir.mongodb.net/chat?retryWrites=true&w=majority&appName=AcadenoTest/chat
-MONGODB_URI=mongodb+srv://rishikeshpc4545_db_user:FYW3Hq3FTYtnKgLm@user.mwmxtcd.mongodb.net/chat?retryWrites=true&w=majority&appName=user/chat
+# MONGODB_URI=mongodb+srv://rishikeshpc4545_db_user:FYW3Hq3FTYtnKgLm@user.mwmxtcd.mongodb.net/chat?retryWrites=true&w=majority&appName=user/chat
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-in-production-12345
@@ -22,6 +22,6 @@ OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 OPENROUTER_MODEL=openai/gpt-3.5-turbo
 
 # Gemini AI Configuration
-# GEMINI_API_KEY=AIzaSyDgcfuVNjEyeaE4PFTmV1iiDsIVWP7U3X4
-GEMINI_API_KEY=AIzaSyDUZlrpgPAU4lT1hJyo6BtHXbe4DanV9HM
+GEMINI_API_KEY=AIzaSyDgcfuVNjEyeaE4PFTmV1iiDsIVWP7U3X4
+# GEMINI_API_KEY=AIzaSyDUZlrpgPAU4lT1hJyo6BtHXbe4DanV9HM
 GEMINI_MODEL=gemini-2.0-flash
